# wgkex

./: .bazelversion  .coveragerc  .gitignore  BUILD  CHANGELOG.md  CODEOWNERS  Dockerfile  MANIFEST.in  MODULE.bazel  PARKER.md  README.md  WORKSPACE  blacklist.yaml.example  docker-compose.override.yaml.example  docker-compose.yml  entrypoint  env.example  pyproject.toml  requirements.txt  requirements_lock.txt  setup.py  wgked  wgked.py  wgked.yaml.example  wgkex-allowlist.yaml.example  wgkex.yaml.example
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  docker-entrypoint.sh  mosquitto.conf  mosquitto.passwd  netbox_docker-compose.override.yml
.github/: dependabot.yml
.github/workflows/: bazel.yml  bazelversion.yml  black.yml  build.yml  coveralls.yml  docker.yml  publish.yml  pylint.yml
Docs/: BLACKLIST.md  architecture.dot
templates/: index.html
wgkex/allowlist/: BUILD  __init__.py  allowlist.py  allowlist_test.py
wgkex/broker/: BUILD  app.py  app_test.py  blacklist.py  blacklist_test.py  ipam.py  ipam_json.py  ipam_json_test.py  ipam_netbox.py  ipam_netbox_test.py  metrics.py  metrics_test.py  parker.py  parker_test.py  signer.py  signer_test.py  startup_test.py
wgkex/broker/templates/: index.html
wgkex/client/: __init__.py  app.py  netlink.py
wgkex/common/: BUILD  logger.py  mqtt.py  utils.py  utils_test.py
wgkex/config/: BUILD  __init__.py  config.py  config_test.py
wgkex/worker/: BUILD  app.py  app_test.py  mqtt.py  mqtt_test.py  msg_queue.py  msg_queue_test.py  netlink.py  netlink_test.py  peer_state.py  peer_state_test.py
wgtools/frontend/: wgked.py
