[tool.poetry]
name = "wgkex"
version = "0.1.0"
description = "Wireguard Connection Broker"
repository = "https://github.com/freifunkMUC/wgkex"
readme = "README.md"
license = "GPL-2.0-only"
authors = []

[tool.poetry.scripts]
wgkex-broker = "wgkex.broker.app:main"

[tool.poetry.dependencies]
python = "^3.6"
PyYAML = "^5.3.1"
pyroute2 = "^0.5.14"
voluptuous = "^0.12.0"
pika = "^1.1.0"
structlog = "^20.1.0"
bottle = "^0.12.19"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"
isort = "^5.6.4"

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
